# tokensaver-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tokensaver_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  manifest.example.json  results.json  results.md
benchmarks/fixtures/: manifest.ci.json
benchmarks/fixtures/android_native_fixture/: Makefile  build.gradle
benchmarks/fixtures/angular_fixture/: package.json
benchmarks/fixtures/angular_fixture/src/app/: app.routes.ts
benchmarks/fixtures/angular_fixture/src/environments/: environment.prod.ts  environment.ts
benchmarks/fixtures/django_fixture/: Makefile  manage.py  requirements.txt
benchmarks/fixtures/django_fixture/mysite/blog/: models.py  (+2 more)
benchmarks/fixtures/fastapi_fixture/: .env.example  Makefile  requirements.txt
benchmarks/fixtures/fastapi_fixture/app/: main.py  models.py  routes.py
benchmarks/fixtures/flutter_fixture/: pubspec.yaml
benchmarks/fixtures/flutter_fixture/lib/: main.dart
benchmarks/fixtures/go_fixture/: .env.example  Makefile  go.mod
benchmarks/fixtures/ios_swift_fixture/: Makefile
benchmarks/fixtures/ios_swift_fixture/DemoApp.xcodeproj/: project.pbxproj
benchmarks/fixtures/nested_flutter_repo_fixture/mobile/: pubspec.yaml
benchmarks/fixtures/nextjs_fixture/: .env.example  package.json
benchmarks/fixtures/nextjs_fixture/app/: layout.tsx
benchmarks/fixtures/nextjs_python_web_workspace_fixture/backend/: pyproject.toml
benchmarks/fixtures/nextjs_python_web_workspace_fixture/frontend/: package.json
benchmarks/fixtures/node_fixture/: package.json
benchmarks/fixtures/node_fixture/src/: index.js
benchmarks/fixtures/php_fixture/: composer.json
benchmarks/fixtures/php_fixture/public/: index.php
benchmarks/fixtures/php_fixture/routes/: api.php
benchmarks/fixtures/python_fixture/: app.py  pyproject.toml
benchmarks/fixtures/python_fixture/myapp/: config.py  main.py  routes.py
benchmarks/fixtures/react_native_fixture/: App.tsx  package.json
benchmarks/fixtures/react_native_fixture/src/: config.ts
benchmarks/fixtures/react_web_fixture/: .env.example  package.json
benchmarks/fixtures/react_web_fixture/src/: App.tsx
benchmarks/fixtures/spring_boot_fixture/: Makefile  build.gradle
docs/: COMPATIBILITY.md  KNOWN_LIMITATIONS.md  OUTPUT_SCHEMA.md
generators/: flutter_api_manifest.py  flutter_module_manifest.py  flutter_remote_config.py  flutter_route_map.py  flutter_widget_catalog.py
scripts/: release_smoke.py
tests/: test_artifact_usefulness.py  test_benchmark.py  test_cli_init.py  test_fixture_suite_contract.py  test_output_contract.py  test_public_export_contract.py  test_workspace_detection.py
tokensaver/: __init__.py  benchmark.py  build.py  eval.py  impact.py  integrations.py  mcp_server.py  scanner.py  snapshot.py  tokenizer.py  workspaces.py
tokensaver/core/: __init__.py  common_artifacts.py  helpers.py  models.py  plugin_api.py  registry.py
tokensaver/plugins/: __init__.py  android_native.py  angular.py  flutter.py  generic.py  go_mod.py  ios_swift.py  nextjs.py  python_web.py  react_native.py  react_web.py  spring_boot.py  workspace.py
(+40 files in other folders)
