[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensaver"
version = "1.0.0"
description = "Compile repositories into minimal agent context with exact token compression metrics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Rachit Gupta" }
]
dependencies = [
  "tiktoken>=0.7.0"
]
keywords = ["agents", "codebase", "benchmark", "tokens", "context"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.scripts]
tokensaver = "tokensaver_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tokensaver*"]
