[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensaver-ai"
version = "1.2.1"
description = "Compile repositories into minimal agent context with exact token compression metrics."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Rachit Gupta" }
]
dependencies = [
  "tiktoken>=0.7.0"
]
keywords = ["agents", "codebase", "benchmark", "tokens", "context", "mcp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.0.0"]

[project.scripts]
tokensaver = "tokensaver_cli:main"
tokensaver-mcp = "tokensaver.mcp_server:main"

[tool.setuptools]
include-package-data = true
py-modules = ["tokensaver_cli"]

[tool.setuptools.packages.find]
include = ["tokensaver*"]
